feat:게시판/마케팅 활용 동의
