# backend/internal/adapter/router/router.go
@@ -2,9 +2,12 @@ package router
 
 import (
 	"backend/internal/adapter/handler/app"
+	brandhandler "backend/internal/adapter/handler/brand"
+	carhandler "backend/internal/adapter/handler/car"
+	mycarhandler "backend/internal/adapter/handler/mycar"
 	"backend/internal/container"
 
-	_ "backend/docs" // swag generate로 생성되는 폴더
+	_ "backend/docs"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -15,28 +18,37 @@ func SetupRouter(c *container.Container) *gin.Engine {
 	r := gin.Default()
 
 	authHandler := app.NewAuthHandler(c.AuthUsecase, c.KakaoUsecase)
+	marketingConsentHandler := app.NewMarketingConsentHandler(c.MarketingConsentUsecase)
+	carHandler := carhandler.NewHandler(c.CarUsecase)
+	brandHandler := brandhandler.NewHandler(c.BrandUsecase)
+	myCarHandler := mycarhandler.NewHandler(c.MyCarUsecase)
 
-	// 미들웨어 설정 (필요시 CORS, 인증 등 추가 가능)
-	// r.Use(CORSMiddleware())
-
-	// Swagger UI 설정
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	v1 := r.Group("/api/v1")
 	{
-
 		userGroup := v1.Group("/auth")
 		{
-			userGroup.POST("/onboard", authHandler.Onboarding)     // 초기 진입
-			userGroup.POST("/kakao-login", authHandler.KakaoLogin) // 카카오 로그인
-			// userGroup.POST("/refresh", authApi.RefreshToken) // 토큰 재발급
+			userGroup.POST("/onboard", authHandler.Onboarding)
+			userGroup.POST("/kakao-login", authHandler.KakaoLogin)
+			userGroup.POST("/agreed", marketingConsentHandler.SaveMarketingConsent)
 		}
 
-		// [차량 관련 경로 - 나중에 추가할 곳]
-		// carGroup := v1.Group("/cars")
-		// {
-		//     carGroup.GET("/recommend", api.GetRecommendCars)
-		// }
+		carGroup := v1.Group("/cars")
+		{
+			carGroup.GET("", carHandler.List)
+
+			carGroup.POST("/register", myCarHandler.RegisterMyCar)
+			carGroup.GET("/register/:user_id", myCarHandler.GetMyCars)
+
+			carGroup.GET("/:id", carHandler.GetDetail)
+			carGroup.GET("/:id/images", carHandler.GetImages)
+		}
+
+		brandGroup := v1.Group("/brands")
+		{
+			brandGroup.GET("", brandHandler.List)
+		}
 	}
 
 	return r
