# backend/internal/domain/entity/marketing_consent.go
@@ -1,0 +1,12 @@
+package entity
+
+import "time"
+
+type MarketingConsent struct {
+	ID              int64
+	DeviceID        string
+	MarketingAgreed bool
+	AgreedAt        time.Time
+	CreatedAt       time.Time
+	UpdatedAt       time.Time
+}
